# api-template-litestar

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yaml  cicd.yaml
sql/: 00_schema.sql
src/: app.py  bootstrap.py  database.py  dependencies.py  environment.py  errors.py  logging.py  version.py
src/api/health/: handlers.py  services.py
src/api/index/: handlers.py
tests/: conftest.py  test_health.py  test_index.py  test_logging.py
tests/api/: conftest.py  test_health.py
