[project]
name = "api-template-litestar"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "litestar ~= 2.7",
    "psycopg ~= 3.1",
    "uvicorn ~= 0.27",
]

[project.optional-dependencies]
dev = [
    "mypy ~= 1.8",
    "pytest ~= 8.0",
    "pytest-asyncio ~= 0.23",
    "pytest-cov ~= 4.1",
    "ruff ~= 0.2",
]

[tool.mypy]
check_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
